--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,12 +11,13 @@
         "ms-toolsai.jupyter",
         "esbenp.prettier-vscode"
     ],
-    "remoteUser": "lgorman",
+    "remoteUser": "ubuntu",
     // "workspaceMount": "source=${localWorkspaceFolder}/,target=/workspace,type=bind",
-    // "workspaceFolder": "../",    
-    // "mounts": [
-    //     "source=${localWorkspaceFolder}/README.md,target=/workspace/README.md,type=bind",
-    //     "source=${localWorkspaceFolder}/data, target=/workspace/data,type=bind"
-
-    // ]
+    "workspaceFolder": "/workspace",
+    "mounts": [
+        "source=${localWorkspaceFolder}/README.md,target=/workspace/README.md,type=bind",
+        "source=${localWorkspaceFolder}/data,target=/workspace/data,type=bind",
+        "source=${localWorkspaceFolder}/pyproject.toml,target=/workspace/pyproject.toml,type=bind",
+        
+    ]
 }
